small retroactive change for assignment

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         <p>Hot Beans Web</p>
         <p>35-41 St Mary's Gate, Nottingham NG1 1QN</p>
         <p>0115 793 4556</p>
-        <p><a href="hotbeansweb@protonmail.com">hotbeansweb@protonmail.com</a> </P>
+        <p><a href="mailto:hotbeansweb@protonmail.com">hotbeansweb@protonmail.com</a> </P>
         <p>Authored by Ethan Clemens</p>
     </div>    
     <div class="icons" style="color:#fff">
