--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <div class="course-col">
                     <h4>Degrees/HNDs</h4>
                  
-                    <p>If you are considering a career in web development but do not yet have the relevant higher level qualification, we have included a few local universities and courses which offer courses.</p>
+                    <p>If you are considering a career in web development but do not yet have the relevant higher level qualification, we have included a few local universities and colleges which offer courses.</p>
                     <a href="https://www.nottingham.ac.uk/studywithus/ugstudy/courses/UG/Computer-Science-BSc-Hons-U6UCMPSC.html">
                     <button class="link-btn">University of Nottingham</button></a>
                     <a href="https://www.ntu.ac.uk/course/science-and-technology/ug//bsc-hons-computer-science">
